--- a/wp-content/themes/understrap/sass/theme/_footer.scss
+++ b/wp-content/themes/understrap/sass/theme/_footer.scss
@@ -115,3 +115,62 @@
     }
 }
 
+
+
+
+
+
+#wrapper-footer {
+    overflow: hidden;
+
+    .row {
+        margin-right: 0;
+        margin-left: 0;
+        padding: 0;
+    }
+}
+
+
+.form-container
+{
+    margin-top: 15px;
+    border: 2px solid #fff;
+    padding: 0;
+    border-radius: 7px;
+    overflow: hidden;
+    height: 40px;
+
+    .input-containers
+    {
+        margin: 0;
+        padding: 0;
+    }
+
+    input{
+        padding-left: 15px;
+        padding-right: 15px;
+        border: 0;
+        height: 40px;
+    }
+
+    input[type="email"]
+    {
+        background-color: $primary-color;
+        color: white;
+        font-family: $primary-font;
+        font-size: 0.9em;
+    }
+
+    input[type="submit"]
+    {
+        padding-left: 5px;
+        padding-right: 5px;
+        background-color: white;
+        color: $primary-color;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-family: $primary-font;
+        font-size: 0.85em;
+        border: 8px solid #fff;
+    }
+}
